update to new version 1.2.2

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
+---
 sources:
-  "libXtst-1.2.1.tar.bz2": 44e19899f9938d3db5546e51c338d6f86d88cfe2
+  libXtst-1.2.2.tar.bz2: 7fd92a3c865c3c5e1cc724646babc3e1cdc799bc
