--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libXtst-1.2.3.tar.bz2: 27d004db631bee3a82155d3caf961d9584207d36
+  libXtst-1.2.4.tar.xz: 6ba5ad6ebad1b14a077b274b0a6965bab36cbfda
